# MVT

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: dryrun_naid.yaml  espre_2021-08-11_naid.yaml  hd189733_naid.yaml
docs/: DRYRUN.md
mvt/: __init__.py  config.py  detrend.py  discover.py  fitlines.py  frameguess.py  frameqa.py  injection.py  io_espre.py  matrix.py  nulls.py  oot.py  plots.py  residuals.py  run_mvt_espre.py  rv.py  saveio.py  stack.py  timephase.py
mvt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run_dryrun.sh  run_mvt_espre.py  synth_night.py
